refactor:  !fullName.trim().isEmpty() changed to !fullName.isBlank()