@@ -6,7 +6,7 @@ public class CurrencyValidator {
         int MAX_NAME_LENGTH = 50;
         int MAX_SIGN_LENGTH = 3;
 
-        return fullName != null && !fullName.trim().isEmpty() &&
+        return fullName != null && !fullName.isBlank() &&
                code != null && !code.trim().isEmpty() &&
                sign != null && !sign.trim().isEmpty() &&
                code.matches("^[A-Za-z]{3}$") &&
